--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 <div class="pricing-column col-lg-4 col-md-6">
   <div class="card">
     <div class="card-header">  
-      <h3>Chihuahua</h3>
+      <h3>Weekly</h3>
     </div>
     <div class="card-body">
       <h2 class="section-heading">Free</h2>
@@ -171,7 +171,7 @@
 <div class="pricing-column col-lg-4 col-md-6">
   <div class="card">
     <div class="card-header">  
-      <h3>Labrador</h3>
+      <h3>Monthly</h3>
     </div>
     <div class="card-body">
           <h2 class="section-heading">$49 / mo</h2>
@@ -187,7 +187,7 @@
   <div class="card">
  
     <div class="card-header">  
-      <h3>Mastiff</h3>
+      <h3>Yearly</h3>
     </div>
   
     <div class="card-body">
